# bitmap-marketplace

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Cargo.toml  Dockerfile  README.md  docker-compose.bitmap-stack.yml  docker-compose.yml  ordinals-marketplace-flows.skill
.beads/: issues.jsonl  metadata.json
.beads/backup/: backup_state.json  config.jsonl  dependencies.jsonl  events.jsonl  issues.jsonl
.beads/dolt.20260305T153025Z.corrupt.backup/: .beads-credential-key
.github/workflows/: rust.yml
docs/: 2d-to-3d-transition.md
migrations/: 20260305000001_create_collections.sql  20260305000002_create_inscriptions.sql  20260305000003_create_listings.sql  20260305000004_create_offers.sql  20260305000005_create_sales.sql  20260305000006_create_activity_feed.sql  20260305000007_add_updated_at_triggers.sql  20260310000001_mempool_protection_listings.sql  20260310000002_listing_source_marketplace.sql  20260316000001_add_offer_activity_type.sql  20260320000001_marketplace_fee.sql  20260320000002_seller_sale_sig.sql  20260322000001_add_trait_partial_indexes.sql  20260401000001_create_profiles.sql  20260401000002_add_token_version.sql  20260407000001_add_bitmaps_inscription_id_index.sql
src/: errors.rs  lib.rs  main.rs
src/db/: activity.rs  bitmaps.rs  collections.rs  inscriptions.rs  listings.rs  mod.rs  offers.rs  profiles.rs  sales.rs
src/models/: activity.rs  bitmap.rs  collection.rs  inscription.rs  listing.rs  mod.rs  offer.rs  sale.rs
src/routes/: activity.rs  auth.rs  bitmaps.rs  collections.rs  explore.rs  inscriptions.rs  listings.rs  mod.rs  offers.rs  orders.rs  portfolio.rs
src/services/: bitcoin_rpc.rs  indexer.rs  jwt.rs  magic_eden.rs  marketplace_keypair.rs  mempool_watcher.rs  mod.rs  ord.rs  psbt.rs  psbt_tests.rs  royalty.rs
src/ws/: mod.rs
tests/: e2e_regtest.rs  regtest_helpers.rs  routes.rs
