[package]
name = "bitmap-marketplace"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework
axum = { version = "0.7", features = ["ws", "macros"] }
tokio = { version = "1", features = ["full"] }
tower = { version = "0.4", features = ["limit"] }
tower-http = { version = "0.5", features = ["cors", "trace", "limit", "timeout", "compression-gzip"] }
tower_governor = "0.4"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "migrate"] }

# Bitcoin
bitcoin = { version = "0.31", features = ["serde"] }
bitcoincore-rpc = "0.18"

# Utilities
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
reqwest = { version = "0.11", features = ["json"] }
bytes = "1"
dotenvy = "0.15"
tokio-tungstenite = "0.21"
hex = "0.4"
jsonwebtoken = "9"
bip322 = "0.0.10"
rand = "0.8"
futures = "0.3"
moka = { version = "0.12", features = ["sync"] }

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
tower = { version = "0.4", features = ["util"] }
http-body-util = "0.1"
