[package]
name = "bitmap-marketplace"
version = "0.1.0"
edition = "2021"

[features]
testing = []

[dependencies]
# Web framework
axum = { version = "0.7", features = ["ws", "macros"] }
tokio = { version = "1", features = ["full"] }
tower = { version = "0.4", features = ["limit"] }
tower-http = { version = "0.5", features = ["cors", "trace", "limit", "timeout", "compression-gzip", "request-id"] }
tower_governor = "0.4"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "migrate"] }

# Bitcoin
bitcoin = { version = "0.31", features = ["serde"] }
bitcoincore-rpc = "0.18"

# Utilities
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
reqwest = { version = "0.12", features = ["json"] }
secrecy = "0.8"
async-trait = "0.1"
bytes = "1"
dotenvy = "0.15"
tokio-tungstenite = "0.21"
hex = "0.4"
jsonwebtoken = "9"
bip322 = "0.0.10"
rand = "0.8"
futures = "0.3"
moka = { version = "0.12", features = ["future"] }

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
tower = { version = "0.4", features = ["util"] }
http-body-util = "0.1"
testcontainers = "0.27.2"
testcontainers-modules = { version = "0.15.0", features = ["postgres"] }
serial_test = "3.4.0"
base64 = "0.22.1"
